chore: new version

--- a/config.yml
+++ b/config.yml
@@ -8,8 +8,8 @@ module:
     - path: PaperMod
 
 enableRobotsTXT: true
-buildDrafts: false
-buildFuture: false
+buildDrafts: true
+buildFuture: true
 buildExpired: false
 
 googleAnalytics: UA-123-45
@@ -61,24 +61,25 @@ params:
     iconHeight: 35
 
   # profile-mode
-  profileMode:
-    enabled: false # needs to be explicitly set
-    title: ExampleSite
-    subtitle: "This is subtitle"
-    imageUrl: "<img location>"
-    imageWidth: 120
-    imageHeight: 120
-    imageTitle: my image
-    buttons:
-      - name: Posts
-        url: posts
-      - name: Tags
-        url: tags
+  # profileMode:
+  #   enabled: false # needs to be explicitly set
+  #   title: ExampleSite
+  #   subtitle: "This is subtitle"
+  #   imageUrl: "<img location>"
+  #   imageWidth: 120
+  #   imageHeight: 120
+  #   imageTitle: my image
+  #   buttons:
+  #     - name: Posts
+  #       url: posts
+  #     - name: Tags
+  #       url: tags
 
   # home-info mode
-  homeInfoParams:
-    Title: "Hi there \U0001F44B"
-    Content: "I am a software engineer and I talk about Kubernetes, Serverless, Go and other things."
+  # homeInfoParams:
+  #   Title: "Hi there \U0001F44B"
+  #   Content: "I am a software engineer and I talk about Kubernetes, Serverless, Go and other things."
+  #   enabled: false # needs to be explicitly set
 
   socialIcons:
     - name: twitter
