chore: new version

--- a/config.yml
+++ b/config.yml
@@ -76,10 +76,9 @@ params:
   #       url: tags
 
   # home-info mode
-  # homeInfoParams:
-  #   Title: "Hi there \U0001F44B"
-  #   Content: "I am a software engineer and I talk about Kubernetes, Serverless, Go and other things."
-  #   enabled: false # needs to be explicitly set
+  homeInfoParams:
+    Title: "show me the code ☕"
+    Content: "Hi, I'm Rafael Peroco, a software engineer and I talk about Kubernetes, Serverless, Go and other things."
 
   socialIcons:
     - name: twitter
