--- a/config.yml
+++ b/config.yml
@@ -14,6 +14,8 @@ minify:
   disableXML: true
   minifyOutput: true
 
+ignoreCache: true
+
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
   title: rafaelperoco
