--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -32,7 +32,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.101.0+extended
+      HUGO_VERSION: 0.119.0
     steps:
       - name: Install Hugo CLI
         run: |
@@ -57,8 +57,10 @@ jobs:
           HUGO_ENV: production
         run: |
           hugo \
+            --gc \
+            --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/" \
-            --cleanDestinationDir
+            --cleanDestinationDir     
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
